--- a/notes/templates/notes/notes_list.html
+++ b/notes/templates/notes/notes_list.html
@@ -1,41 +1,17 @@
-{% load static %}
+{% extends "base.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <title>SmartNotes!</title>
-</head>
+<div class="jumbotron">
+    <h1>These are the notes:</h1>
+    <ul>
+        {% for note in notes %}
+        <!-- <a href={{note.pk}}><li>{{note.title}}</li></a> -->
+        <a href="{{request.get_full_path}}/{{note.pk}}">
+            <li class="note-li">{{note.title}}</li>
+        </a>
+        {% endfor %}
+    </ul>
+</div>
 
-<body>
-    <div class="jumbotron">
-        <h1>These are the notes:</h1>
-        <ul>
-            {% for note in notes %}
-            <!-- <a href={{note.pk}}><li>{{note.title}}</li></a> -->
-            <a href="{{request.get_full_path}}/{{note.pk}}">
-                <li class="note-li">{{note.title}}</li>
-            </a>
-            {% endfor %}
-        </ul>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
