--- a/notes/templates/notes/notes_list.html
+++ b/notes/templates/notes/notes_list.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<div class="jumbotron">
-    <h1>These are the notes:</h1>
-    <ul>
-        {% for note in notes %}
-        <!-- <a href={{note.pk}}><li>{{note.title}}</li></a> -->
-        <a href="{{request.get_full_path}}/{{note.pk}}">
-            <li class="note-li">{{note.title}}</li>
-        </a>
-        {% endfor %}
-    </ul>
+<h1 class="my-5">These are the notes:</h1>
+<div class="row row-cols3 g-2">
+    {% for note in notes %}
+    <div class="col">
+        <div class="p-3 border">
+            <a href="{% url 'notes.detail' pk=note.id %}" class="text-dark text-decoration-non">
+                <h3>{{note.title}}</h3>
+            </a>
+            {{note.text|truncatechars:10}}
+        </div>
+    </div>
+    {% endfor %}
 </div>
-
 {% endblock %}
