--- a/notes/templates/notes/notes_form.html
+++ b/notes/templates/notes/notes_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form action="{% url 'notes.new' %}" method="post">
+<form method="post">
     {% csrf_token%}
     {{ form }}
     <button type="submit" class="btn btn-primary my-5">Submit</button>
@@ -11,5 +11,7 @@
     {{form.errors.title.as_text}}
 </div>
 {% endif %}
+
+<a href="{% url 'notes.list' %}" class="btn btn-secondary">Cancel</a>
 
 {% endblock %}
