Add style to nice base

--- a/static/templates/nice_base.html
+++ b/static/templates/nice_base.html
@@ -37,8 +37,8 @@
 
 
     <!-- Template Main CSS File -->
-    <link href="{% static 'css/nice_style.css' %}" rel="stylesheet">
-    <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"> -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/nice_style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
     <title>SmartNotes!</title>
 </head>
