--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -24,19 +24,21 @@
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 {% for job in jobs.all %}
                 <div class="col">
-                    <div class="card shadow-sm">
-                        <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                    <a href="{% url 'jobsdetail' job.id %}">
+                        <div class="card shadow-sm">
+                            <!-- <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
                             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
                             preserveAspectRatio="xMidYMid slice" focusable="false">
                             <title>Placeholder</title>
                             <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef"
                                 dy=".3em">Thumbnail</text>
                         </svg> -->
-                        <img class="card-img-top" src="{{ job.image.url }}" alt="">
-                        <div class="card-body">
-                            <p class="card-text">{{ job.summary }}</p>
+                            <img class="card-img-top" src="{{ job.image.url }}" alt="">
+                            <div class="card-body">
+                                <p class="card-text">{{ job.summary }}</p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 {% endfor %}
             </div>
