--- a/forms/templates/forms/order.html
+++ b/forms/templates/forms/order.html
@@ -5,7 +5,9 @@
 <h1>Nandia's Garden</h1>
 <h2>Order a Pizza</h2>
 
-<form action="">
+<form action="{% url 'order' %}" method="post">
+    {% csrf_token %}
+
     <label for="topping1">Toping 1: </label>
     <input type="text" name="topping1" id="topping1">
 
@@ -18,6 +20,8 @@
         <option value="medium">Medium</option>
         <option value="large">Large</option>
     </select>
+
+    <input type="submit" value="Order Pizza">
 </form>
 
 
